--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <section class="rpsGame">
             <div class="playerChoices">
-                <button onclick="rockPaperScissors1()"><img src="http://assets.stickpng.com/images/580b585b2edbce24c47b26f6.png"></button>
-                <button onclick="rockPaperScissors2()"><img src="http://assets.stickpng.com/images/580b585b2edbce24c47b2467.png"></button>
-                <button onclick="rockPaperScissors3()"><img src="http://assets.stickpng.com/images/580b585b2edbce24c47b2bcc.png"></button>
+                <button onclick="rockPaperScissors1()"><img src="Images/rock.png"></button>
+                <button onclick="rockPaperScissors2()"><img src="Images/paper.png"></button>
+                <button onclick="rockPaperScissors3()"><img src="Images/scissors.png"></button>
             </div>
             <div class="computerChoices">
                <img id="1" src="http://assets.stickpng.com/images/580b585b2edbce24c47b26f6.png">
